dcc-portal-ui/app/scripts/common/js/pql/pqlparser.js
PqlPegParser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(s) {return s;},
        peg$c3 = function(first, last) {return first.concat (last);},
        peg$c4 = function(first, last) {return first.concat(last);},
        peg$c5 = function(count, first, last) {return toBasicUnit (first.concat (last), "count");},
        peg$c6 = function(head) {return head;},
        peg$c7 = "count",
        peg$c8 = { type: "literal", value: "count", description: "\"count\"" },
        peg$c9 = "select",
        peg$c10 = { type: "literal", value: "select", description: "\"select\"" },
        peg$c11 = "facets",
        peg$c12 = { type: "literal", value: "facets", description: "\"facets\"" },
        peg$c13 = function(o, args) {return toBasicUnit ([].concat(args), o);},
        peg$c14 = "nested",
        peg$c15 = { type: "literal", value: "nested", description: "\"nested\"" },
        peg$c16 = function(field, filters) {return toFieldValueUnit ("nested", field, filters);},
        peg$c17 = "not",
        peg$c18 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c19 = function(o, l) {return toBasicUnit ([l], o);},
        peg$c20 = "exists",
        peg$c21 = { type: "literal", value: "exists", description: "\"exists\"" },
        peg$c22 = "missing",
        peg$c23 = { type: "literal", value: "missing", description: "\"missing\"" },
        peg$c24 = "eq",
        peg$c25 = { type: "literal", value: "eq", description: "\"eq\"" },
        peg$c26 = "ge",
        peg$c27 = { type: "literal", value: "ge", description: "\"ge\"" },
        peg$c28 = "le",
        peg$c29 = { type: "literal", value: "le", description: "\"le\"" },
        peg$c30 = "ne",
        peg$c31 = { type: "literal", value: "ne", description: "\"ne\"" },
        peg$c32 = "gt",
        peg$c33 = { type: "literal", value: "gt", description: "\"gt\"" },
        peg$c34 = "lt",
        peg$c35 = { type: "literal", value: "lt", description: "\"lt\"" },
        peg$c36 = "=ge=",
        peg$c37 = { type: "literal", value: "=ge=", description: "\"=ge=\"" },
        peg$c38 = "=le=",
        peg$c39 = { type: "literal", value: "=le=", description: "\"=le=\"" },
        peg$c40 = "!=",
        peg$c41 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c42 = "=gt=",
        peg$c43 = { type: "literal", value: "=gt=", description: "\"=gt=\"" },
        peg$c44 = "=lt=",
        peg$c45 = { type: "literal", value: "=lt=", description: "\"=lt=\"" },
        peg$c46 = "==",
        peg$c47 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c48 = ">=",
        peg$c49 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c50 = "<=",
        peg$c51 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c52 = "<>",
        peg$c53 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c54 = ">",
        peg$c55 = { type: "literal", value: ">", description: "\">\"" },
        peg$c56 = "<",
        peg$c57 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c58 = "=",
        peg$c59 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c60 = function(o, l, r) {return toFieldValueUnit (o, l, [].concat(r));},
        peg$c61 = function(l, o, r) {return toFieldValueUnit (altFuncMapping [o], l, [].concat(r));},
        peg$c62 = "in",
        peg$c63 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c64 = function(o, first, rest) {return toFieldValueUnit (o, first, rest);},
        peg$c65 = "and",
        peg$c66 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c67 = "or",
        peg$c68 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c69 = "&",
        peg$c70 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c71 = "|",
        peg$c72 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c73 = function(o, l) {return toBasicUnit (l, o);},
        peg$c74 = function(l, o, r) {o = altFuncMapping[o]; return toBasicUnit ([l, r], o);},
        peg$c75 = "sort",
        peg$c76 = { type: "literal", value: "sort", description: "\"sort\"" },
        peg$c77 = function(o, list) {return toBasicUnit (list, o);},
        peg$c78 = "limit",
        peg$c79 = { type: "literal", value: "limit", description: "\"limit\"" },
        peg$c80 = function(o, size) {return toLimitUnit (size);},
        peg$c81 = function(o, from, size) {return toLimitUnit (from, size);},
        peg$c82 = function(order, limit) {return [order, limit];},
        peg$c83 = "*",
        peg$c84 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c85 = ",",
        peg$c86 = { type: "literal", value: ",", description: "\",\"" },
        peg$c87 = "\"",
        peg$c88 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c89 = "'",
        peg$c90 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c91 = ".",
        peg$c92 = { type: "literal", value: ".", description: "\".\"" },
        peg$c93 = "(",
        peg$c94 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c95 = ")",
        peg$c96 = { type: "literal", value: ")", description: "\")\"" },
        peg$c97 = /^[a-zA-Z_]/,
        peg$c98 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c99 = /^[a-zA-Z_0-9.]/,
        peg$c100 = { type: "class", value: "[a-zA-Z_0-9.]", description: "[a-zA-Z_0-9.]" },
        peg$c101 = function(first, rest) {return headJoinsTail (first, rest);},
        peg$c102 = /^[ a-zA-Z.0-9_:!()@#$%\^&=+{}|\-,.<>?\/~`]/,
        peg$c103 = { type: "class", value: "[ a-zA-Z.0-9_:!()@#$%\\^&=+{}|\\-,.<>?\\/~`]", description: "[ a-zA-Z.0-9_:!()@#$%\\^&=+{}|\\-,.<>?\\/~`]" },
        peg$c104 = "+",
        peg$c105 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c106 = "-",
        peg$c107 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c108 = null,
        peg$c109 = function(sign, id) {return toSortUnit (id, sign);},
        peg$c110 = /^[0-9]/,
        peg$c111 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c112 = function(digits) {return headJoinsTail (".", digits);},
        peg$c113 = function(sign, digits, frac) {var num = parseFloat (digits.join("") + frac);
        return (sign === "-") ? (num * -1) : num;
        },
        peg$c114 = function(digits) { var num = parseInt (digits.join(""), 10); return num;},
        peg$c115 = /^[ \r\n\t]/,
        peg$c116 = { type: "class", value: "[ \\r\\n\\t]", description: "[ \\r\\n\\t]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsecore();

      return s0;
    }

    function peg$parsecore() {
      var s0;

      s0 = peg$parsestatementArray();
      if (s0 === peg$FAILED) {
        s0 = peg$parseorderedStatementArray();
        if (s0 === peg$FAILED) {
          s0 = peg$parsecountStatement();
        }
      }

      return s0;
    }

    function peg$parsestatementArray() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parsestatement();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c2(s3);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c2(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestatement();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c3(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$currPos;
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c2(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$parsestatement();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCOMMA();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s2;
              s3 = peg$c2(s3);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parselimitFilter();
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = [];
          s2 = peg$currPos;
          s3 = peg$parsestatement();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCOMMA();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s2;
              s3 = peg$c2(s3);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$currPos;
            s3 = peg$parsestatement();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseCOMMA();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s2;
                s3 = peg$c2(s3);
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parseorderAndLimitFilter();
            if (s2 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c4(s1, s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        }
      }

      return s0;
    }

    function peg$parseorderedStatementArray() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parsestatement();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c2(s3);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parsestatement();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c2(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseorderFilter();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c3(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecountStatement() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseCOUNT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCOMMA();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parsefilters();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseCOMMA();
            if (s6 !== peg$FAILED) {
              peg$reportedPos = s4;
              s5 = peg$c2(s5);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parsefilters();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseCOMMA();
              if (s6 !== peg$FAILED) {
                peg$reportedPos = s4;
                s5 = peg$c2(s5);
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsefilters();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c5(s1, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsefilters() {
      var s0;

      s0 = peg$parseuniFunc();
      if (s0 === peg$FAILED) {
        s0 = peg$parsebinFuncSyntax1();
        if (s0 === peg$FAILED) {
          s0 = peg$parsebinFuncSyntax2();
          if (s0 === peg$FAILED) {
            s0 = peg$parseinFilter();
            if (s0 === peg$FAILED) {
              s0 = peg$parsenaryFuncSyntax1();
              if (s0 === peg$FAILED) {
                s0 = peg$parsenaryFuncSyntax2();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsenot();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsenested();
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0;

      s0 = peg$parsefilters();
      if (s0 === peg$FAILED) {
        s0 = peg$parsefunctions();
      }

      return s0;
    }

    function peg$parsestringArgArray() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parseSTRING();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c6(s3);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseSTRING();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c6(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSTRING();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseidArray() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parseID();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c6(s3);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseID();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c6(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsenumberArray() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parseNUMBER();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c6(s3);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseNUMBER();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMMA();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c6(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseCOUNT() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseOPAR();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCPAR();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsefunctionNames() {
      var s0;

      if (input.substr(peg$currPos, 6) === peg$c9) {
        s0 = peg$c9;
        peg$currPos += 6;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c11) {
          s0 = peg$c11;
          peg$currPos += 6;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
      }

      return s0;
    }

    function peg$parsefunctions() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefunctionNames();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseOPAR();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseidArray();
            if (s4 === peg$FAILED) {
              s4 = peg$parseASTERISK();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseCPAR();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c13(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsenested() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
